# opensteno

./: .gitignore  CMakeLists.txt
doc/: Doxyfile.in
source/: Steno.cpp  StenoInput.cpp  StenoInput.hpp  definitions.cpp  definitions.hpp  gui.cpp  gui.hpp  main.cpp  opensteno.ui  sdleventthread.cpp  sdleventthread.hpp
